add landing page

--- a/package.json
+++ b/package.json
@@ -12,19 +12,27 @@
     "@headlessui/react": "^2.2.4",
     "@types/js-cookie": "^3.0.6",
     "@vercel/og": "^0.6.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
     "js-cookie": "^3.0.5",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.487.0",
+    "motion": "^12.23.12",
     "next": "15.3.0",
     "next-intl": "^4.0.2",
     "nextjs-toploader": "^3.8.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-social-icons": "^6.24.0",
-    "resend": "^4.7.0"
+    "react-svg-credit-card-payment-icons": "^4.1.0",
+    "resend": "^4.7.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.3.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
